--- a/analysis/scanpath_classification/strategy_classification.ipynb
+++ b/analysis/scanpath_classification/strategy_classification.ipynb
@@ -13,12 +13,13 @@
     "from sklearn.metrics import f1_score\n",
     "from MarkovModels.MarkovModelConstructor import MarkovModelConstructor\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.neural_network import MLPClassifier\n"
+    "from sklearn.neural_network import MLPClassifier\n",
+    "from pattern_mining.ScanpathPatternMiner import ScanpathPatternMiner"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "id": "b4ce4a0f",
    "metadata": {},
    "outputs": [],
@@ -36,7 +37,7 @@
     "    \n",
     "    # Evaluate the model\n",
     "    conf_matrix = pd.crosstab(y_test, model.predict(X_test), rownames=['Actual'], colnames=['Predicted'])\n",
-    "    f1 = f1_score(model.predict(X_test), y_test, average='weighted')\n",
+    "    f1 = f1_score(model.predict(X_test), y_test, average='micro')\n",
     "    print(f\"Model: {model.__class__.__name__}, Accuracy: {f1:.2f}\")\n",
     "    print(\"Confusion Matrix:\")\n",
     "    print(conf_matrix)\n",
@@ -46,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "id": "970631e2",
    "metadata": {},
    "outputs": [
@@ -54,7 +55,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\timur\\uds\\Thesis-Project\\analysis\\scanpath_classification\\MarkovModels\\MarkovModel.py:29: RuntimeWarning: invalid value encountered in divide\n",
+      "/home/gatemrou/uds/thesis/Thesis-Project/analysis/scanpath_classification/MarkovModels/MarkovModel.py:29: RuntimeWarning: invalid value encountered in divide\n",
       "  self.transition_matrix = self.joint_probabilities / self.prior_probabilities[:, np.newaxis]\n"
      ]
     },
@@ -62,52 +63,51 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: RandomForestClassifier, Accuracy: 0.63\n",
+      "Model: RandomForestClassifier, Accuracy: 0.38\n",
       "Confusion Matrix:\n",
-      "Predicted  0  1  2\n",
-      "Actual            \n",
-      "0          2  1  3\n",
-      "1          1  2  1\n",
-      "2          0  2  9\n",
-      "Model: KNeighborsClassifier, Accuracy: 0.69\n",
+      "Predicted   0  1   2\n",
+      "Actual              \n",
+      "0           3  6  11\n",
+      "1           1  1   5\n",
+      "2          11  4  19\n",
+      "Model: KNeighborsClassifier, Accuracy: 0.71\n",
       "Confusion Matrix:\n",
-      "Predicted   2\n",
-      "Actual       \n",
-      "0           6\n",
-      "1           4\n",
-      "2          11\n",
+      "Predicted  1   2\n",
+      "Actual          \n",
+      "0          2  18\n",
+      "1          0   7\n",
+      "2          0  34\n",
       "Model: MLPClassifier, Accuracy: 0.65\n",
       "Confusion Matrix:\n",
       "Predicted  0  1   2\n",
       "Actual             \n",
-      "0          2  2   2\n",
-      "1          1  1   2\n",
-      "2          1  0  10\n"
+      "0          8  3   9\n",
+      "1          0  1   6\n",
+      "2          4  1  29\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\timur\\uds\\venvs\\thesis\\Lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (500) reached and the optimization hasn't converged yet.\n",
+      "/home/gatemrou/venvs/ml2024/lib/python3.12/site-packages/sklearn/neural_network/_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (500) reached and the optimization hasn't converged yet.\n",
       "  warnings.warn(\n"
      ]
     }
    ],
    "source": [
-    "path = \"C:\\\\Users\\\\timur\\\\uds\\\\Thesis-Project\\\\analysis\\\\data\\\\final_datasets\\\\final_experiment_fixations.csv\"\n",
+    "path = \"/home/gatemrou/uds/thesis/Thesis-Project/analysis/data/final_datasets/final_experiment_fixations.csv\"\n",
     "df = pd.read_csv(path)\n",
     "states = ['sent_msg', 'trgt', 'comp', 'dist', 'av_msgs']\n",
     "keep_non_aoi = False\n",
     "if keep_non_aoi:\n",
     "    states.append('non_aoi')\n",
     "MarkovModelConstr = MarkovModelConstructor(states)\n",
+    "save_path = '/home/gatemrou/uds/thesis/Thesis-Project/analysis/data/markov_models'\n",
     "df = MarkovModelConstr.create_markov_models(df, states, include_non_aoi=False, save=False, explode=True, per='participant')\n",
-    "# print(df.iloc[0]['TransitionMatrix'])\n",
     "assert df is not None, \"DataFrame should not be None after Markov Model construction\"\n",
     "# only keep simple condition\n",
-    "df = df[df['Condition'] == 'simple']\n",
-    "df.drop(columns=['Condition'], inplace=True)\n",
+    "df = pd.get_dummies(df, columns=['Condition'], drop_first=True)\n",
     "df = pd.get_dummies(df, columns=['MsgType'], drop_first=True)\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "target = 'StrategyLabel'\n",
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "id": "8a3af2f7",
    "metadata": {},
    "outputs": [
@@ -158,7 +158,7 @@
     }
    ],
    "source": [
-    "path = \"C:\\\\Users\\\\timur\\\\uds\\\\Thesis-Project\\\\analysis\\\\data\\\\final_datasets\\\\final_experiment_participants.csv\"\n",
+    "path = \"/home/gatemrou/uds/thesis/Thesis-Project/analysis/data/final_datasets/final_experiment_participants.csv\"\n",
     "df = pd.read_csv(path)\n",
     "df = df[df['Condition'] != 'all']\n",
     "target = 'StrategyLabel'\n",
@@ -179,7 +179,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 15,
+   "id": "77d613b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/gatemrou/uds/thesis/Thesis-Project/analysis/scanpath_classification/MarkovModels/MarkovModel.py:29: RuntimeWarning: invalid value encountered in divide\n",
+      "  self.transition_matrix = self.joint_probabilities / self.prior_probabilities[:, np.newaxis]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: RandomForestClassifier, Accuracy: 0.44\n",
+      "Confusion Matrix:\n",
+      "Predicted    complex  simple  unambiguous\n",
+      "Actual                                   \n",
+      "complex            7       9            4\n",
+      "simple             4       9            6\n",
+      "unambiguous        3       8           11\n",
+      "Model: KNeighborsClassifier, Accuracy: 0.36\n",
+      "Confusion Matrix:\n",
+      "Predicted    complex  simple  unambiguous\n",
+      "Actual                                   \n",
+      "complex           11       9            0\n",
+      "simple            12       7            0\n",
+      "unambiguous       10       8            4\n",
+      "Model: MLPClassifier, Accuracy: 0.56\n",
+      "Confusion Matrix:\n",
+      "Predicted    complex  simple  unambiguous\n",
+      "Actual                                   \n",
+      "complex            8      11            1\n",
+      "simple             6      10            3\n",
+      "unambiguous        1       5           16\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/gatemrou/venvs/ml2024/lib/python3.12/site-packages/sklearn/neural_network/_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (500) reached and the optimization hasn't converged yet.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "path = \"/home/gatemrou/uds/thesis/Thesis-Project/analysis/data/final_datasets/final_experiment_fixations.csv\"\n",
+    "df = pd.read_csv(path)\n",
+    "states = ['sent_msg', 'trgt', 'comp', 'dist', 'av_msgs']\n",
+    "keep_non_aoi = False\n",
+    "if keep_non_aoi:\n",
+    "    states.append('non_aoi')\n",
+    "MarkovModelConstr = MarkovModelConstructor(states)\n",
+    "save_path = '/home/gatemrou/uds/thesis/Thesis-Project/analysis/data/markov_models'\n",
+    "df = MarkovModelConstr.create_markov_models(df, states, include_non_aoi=False, save=False, explode=True, per='participant')\n",
+    "assert df is not None, \"DataFrame should not be None after Markov Model construction\"\n",
+    "df = pd.get_dummies(df, columns=['MsgType'], drop_first=True)\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "target = 'Condition'\n",
+    "df.drop(columns=['Scanpath', 'TransitionMatrix', 'Subject', 'Correct'], inplace=True)\n",
+    "\n",
+    "model_forest = RandomForestClassifier(n_estimators=1, random_state=42, criterion='gini')\n",
+    "fitted_model_forest = fit_classifier(df, model_forest, target)\n",
+    "model_knn = KNeighborsClassifier(n_neighbors=20)\n",
+    "fitted_model_knn = fit_classifier(df, model_knn, target)\n",
+    "model_nn = MLPClassifier(hidden_layer_sizes=(100, 50), max_iter=500, random_state=42)\n",
+    "fitted_model_nn = fit_classifier(df, model_nn, target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "38cd9481",
    "metadata": {},
    "outputs": [
@@ -188,21 +262,21 @@
      "output_type": "stream",
      "text": [
       "Features:  ['PropTimeOnSentMsg', 'PropTimeOnAvailableMsgs', 'PropTimeOnTrgt', 'PropTimeOnDist', 'PropTimeOnComp', 'PropTimeOnNonAOI', 'RateTogglingAvailableMsgs', 'MeanAnswerTime', 'AnswerAccuracy', 'StrategyLabel_1.0', 'StrategyLabel_2.0']\n",
-      "Model: RandomForestClassifier, Accuracy: 0.60\n",
+      "Model: RandomForestClassifier, Accuracy: 0.61\n",
       "Confusion Matrix:\n",
       "Predicted    complex  simple  unambiguous\n",
       "Actual                                   \n",
       "complex           10       4            3\n",
       "simple             9      13            2\n",
       "unambiguous        3       3           14\n",
-      "Model: KNeighborsClassifier, Accuracy: 0.62\n",
+      "Model: KNeighborsClassifier, Accuracy: 0.61\n",
       "Confusion Matrix:\n",
       "Predicted    complex  simple  unambiguous\n",
       "Actual                                   \n",
       "complex           12       3            2\n",
       "simple             9       9            6\n",
       "unambiguous        2       2           16\n",
-      "Model: MLPClassifier, Accuracy: 0.56\n",
+      "Model: MLPClassifier, Accuracy: 0.39\n",
       "Confusion Matrix:\n",
       "Predicted    complex  simple\n",
       "Actual                      \n",
@@ -213,7 +287,7 @@
     }
    ],
    "source": [
-    "path = \"C:\\\\Users\\\\timur\\\\uds\\\\Thesis-Project\\\\analysis\\\\data\\\\final_datasets\\\\final_experiment_participants.csv\"\n",
+    "path = \"/home/gatemrou/uds/thesis/Thesis-Project/analysis/data/final_datasets/final_experiment_participants.csv\"\n",
     "df = pd.read_csv(path)\n",
     "df = df[df['Condition'] != 'all']\n",
     "target = 'Condition'\n",
@@ -228,11 +302,19 @@
     "model_nn = MLPClassifier(hidden_layer_sizes=(10, 5), max_iter=500, random_state=42, solver='adam')\n",
     "fitted_model_nn = fit_classifier(df, model_nn, target)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ecff67b2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "thesis",
+   "display_name": "ml2024",
    "language": "python",
    "name": "python3"
   },
@@ -246,7 +328,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
