--- a/analysis/scanpath_classification/strategy_classification.ipynb
+++ b/analysis/scanpath_classification/strategy_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "23e11c52",
    "metadata": {},
    "outputs": [],
@@ -13,13 +13,44 @@
     "from sklearn.metrics import f1_score\n",
     "from MarkovModels.MarkovModelConstructor import MarkovModelConstructor\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.neural_network import MLPClassifier\n",
-    "from pattern_mining.ScanpathPatternMiner import ScanpathPatternMiner"
+    "from sklearn.neural_network import MLPClassifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
+   "id": "4179fa4b",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/home/gatemrou/uds/thesis/Thesis-Project/analysis/data/final_datasets/final_experiment_fixations.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m----> 2\u001b[0m df \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241m.\u001b[39mread_csv(path)\n\u001b[1;32m      3\u001b[0m states \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msent_msg\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtrgt\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcomp\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdist\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mav_msgs\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m      4\u001b[0m keep_non_aoi \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "path = \"/home/gatemrou/uds/thesis/Thesis-Project/analysis/data/final_datasets/final_experiment_fixations.csv\"\n",
+    "df = pd.read_csv(path)\n",
+    "states = ['sent_msg', 'trgt', 'comp', 'dist', 'av_msgs']\n",
+    "keep_non_aoi = False\n",
+    "if keep_non_aoi:\n",
+    "    states.append('non_aoi')\n",
+    "MarkovModelConstr = MarkovModelConstructor(states)\n",
+    "save_path = '/home/gatemrou/uds/thesis/Thesis-Project/analysis/data/markov_models'\n",
+    "for explode in [False, True]:\n",
+    "    for per in ['participant', 'trial']:\n",
+    "        MarkovModelConstr.create_markov_models(df, states, include_non_aoi=False, save=True, explode=explode, per=per, save_path=save_path)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "b4ce4a0f",
    "metadata": {},
    "outputs": [],
@@ -47,22 +78,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "970631e2",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/gatemrou/uds/thesis/Thesis-Project/analysis/scanpath_classification/MarkovModels/MarkovModel.py:29: RuntimeWarning: invalid value encountered in divide\n",
-      "  self.transition_matrix = self.joint_probabilities / self.prior_probabilities[:, np.newaxis]\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Index(['StrategyLabel', 'TrgtPos', 'sent_msg_to_sent_msg', 'sent_msg_to_trgt',\n",
+      "       'sent_msg_to_comp', 'sent_msg_to_dist', 'sent_msg_to_av_msgs',\n",
+      "       'trgt_to_sent_msg', 'trgt_to_trgt', 'trgt_to_comp', 'trgt_to_dist',\n",
+      "       'trgt_to_av_msgs', 'comp_to_sent_msg', 'comp_to_trgt', 'comp_to_comp',\n",
+      "       'comp_to_dist', 'comp_to_av_msgs', 'dist_to_sent_msg', 'dist_to_trgt',\n",
+      "       'dist_to_comp', 'dist_to_dist', 'dist_to_av_msgs',\n",
+      "       'av_msgs_to_sent_msg', 'av_msgs_to_trgt', 'av_msgs_to_comp',\n",
+      "       'av_msgs_to_dist', 'av_msgs_to_av_msgs', 'Condition_simple',\n",
+      "       'Condition_unambiguous', 'MsgType_shape'],\n",
+      "      dtype='object')\n",
       "Model: RandomForestClassifier, Accuracy: 0.38\n",
       "Confusion Matrix:\n",
       "Predicted   0  1   2\n",
@@ -70,14 +103,14 @@
       "0           3  6  11\n",
       "1           1  1   5\n",
       "2          11  4  19\n",
-      "Model: KNeighborsClassifier, Accuracy: 0.71\n",
+      "Model: KNeighborsClassifier, Accuracy: 0.56\n",
       "Confusion Matrix:\n",
       "Predicted  1   2\n",
       "Actual          \n",
       "0          2  18\n",
       "1          0   7\n",
       "2          0  34\n",
-      "Model: MLPClassifier, Accuracy: 0.65\n",
+      "Model: MLPClassifier, Accuracy: 0.62\n",
       "Confusion Matrix:\n",
       "Predicted  0  1   2\n",
       "Actual             \n",
@@ -112,7 +145,7 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "target = 'StrategyLabel'\n",
     "df.drop(columns=['Scanpath', 'TransitionMatrix', 'Subject', 'Correct'], inplace=True)\n",
-    "\n",
+    "print(df.columns)\n",
     "model_forest = RandomForestClassifier(n_estimators=1, random_state=42, criterion='gini', class_weight='balanced')\n",
     "fitted_model_forest = fit_classifier(df, model_forest, target)\n",
     "model_knn = KNeighborsClassifier(n_neighbors=20)\n",
@@ -133,21 +166,21 @@
      "text": [
       "Features:  ['PropTimeOnSentMsg', 'PropTimeOnAvailableMsgs', 'PropTimeOnTrgt', 'PropTimeOnDist', 'PropTimeOnComp', 'PropTimeOnNonAOI', 'RateTogglingAvailableMsgs', 'MeanAnswerTime', 'AnswerAccuracy', 'Condition_simple', 'Condition_unambiguous']\n",
       "Class weights:  {2.0: 0.5544554455445545, 0.0: 0.24752475247524752, 1.0: 0.19801980198019803}\n",
-      "Model: RandomForestClassifier, Accuracy: 0.45\n",
+      "Model: RandomForestClassifier, Accuracy: 0.44\n",
       "Confusion Matrix:\n",
       "Predicted  0.0  1.0  2.0\n",
       "Actual                  \n",
       "0.0          4    4    8\n",
       "1.0          2    4    8\n",
       "2.0          7    5   19\n",
-      "Model: KNeighborsClassifier, Accuracy: 0.58\n",
+      "Model: KNeighborsClassifier, Accuracy: 0.46\n",
       "Confusion Matrix:\n",
       "Predicted  0.0  1.0  2.0\n",
       "Actual                  \n",
       "0.0          0    3   13\n",
       "1.0          1    0   13\n",
       "2.0          1    2   28\n",
-      "Model: MLPClassifier, Accuracy: 0.37\n",
+      "Model: MLPClassifier, Accuracy: 0.23\n",
       "Confusion Matrix:\n",
       "Predicted  1.0\n",
       "Actual        \n",
@@ -179,18 +212,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "77d613b6",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/gatemrou/uds/thesis/Thesis-Project/analysis/scanpath_classification/MarkovModels/MarkovModel.py:29: RuntimeWarning: invalid value encountered in divide\n",
-      "  self.transition_matrix = self.joint_probabilities / self.prior_probabilities[:, np.newaxis]\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -253,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "38cd9481",
    "metadata": {},
    "outputs": [
